Add code fomat checker in CI (#179)